#51 - Add to HttpClientContext.Builder to expose state of builder (getters) and configureWith(BeanScope)