@@ -17,6 +17,10 @@
     <tag>HEAD</tag>
   </scm>
 
+  <properties>
+    <surefire.useModulePath>false</surefire.useModulePath>
+  </properties>
+
   <dependencies>
 
     <dependency>
@@ -29,7 +33,14 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb</artifactId>
-      <version>0.15</version>
+      <version>1.0-RC1</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject</artifactId>
+      <version>8.6</version>
       <optional>true</optional>
     </dependency>
 
@@ -58,13 +69,6 @@
 
     <dependency>
       <groupId>io.avaje</groupId>
-      <artifactId>avaje-inject</artifactId>
-      <version>8.3</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>io.avaje</groupId>
       <artifactId>avaje-http-api</artifactId>
       <version>1.16</version>
       <scope>test</scope>
@@ -85,18 +89,10 @@
     </dependency>
 
     <!-- test annotation processors -->
-
-    <dependency>
-      <groupId>io.avaje</groupId>
-      <artifactId>avaje-inject-generator</artifactId>
-      <version>8.3</version>
-      <scope>test</scope>
-    </dependency>
-
 <!--    <dependency>-->
 <!--      <groupId>io.avaje</groupId>-->
-<!--      <artifactId>avaje-jsonb-generator</artifactId>-->
-<!--      <version>0.5</version>-->
+<!--      <artifactId>avaje-inject-generator</artifactId>-->
+<!--      <version>8.6</version>-->
 <!--      <scope>test</scope>-->
 <!--    </dependency>-->
 
@@ -105,20 +101,42 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <executions>
+          <execution>
+            <id>default-testCompile</id>
+            <configuration>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>io.avaje</groupId>
+                  <artifactId>avaje-inject-generator</artifactId>
+                  <version>8.6</version>
+                </path>
+              </annotationProcessorPaths>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
-        <configuration>
-          <argLine>
-            --add-modules com.fasterxml.jackson.databind
-            --add-modules io.avaje.jsonb
-            --add-opens io.avaje.http.client/io.avaje.http.client=ALL-UNNAMED
-            --add-opens io.avaje.http.client/org.example.webserver=ALL-UNNAMED
-            --add-opens io.avaje.http.client/org.example.github=ALL-UNNAMED
-            --add-opens io.avaje.http.client/org.example.webserver=com.fasterxml.jackson.databind
-            --add-opens io.avaje.http.client/org.example.github=com.fasterxml.jackson.databind
-            --add-opens io.avaje.http.client/org.example.github=io.avaje.jsonb
-          </argLine>
-        </configuration>
+        <version>3.0.0-M6</version>
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            &#45;&#45;add-modules com.fasterxml.jackson.databind-->
+<!--            &#45;&#45;add-modules io.avaje.jsonb-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/io.avaje.http.client=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.webserver=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.github=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.webserver=com.fasterxml.jackson.databind-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.github=com.fasterxml.jackson.databind-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.github=io.avaje.jsonb-->
+<!--            &#45;&#45;add-opens io.avaje.http.client/org.example.github=io.avaje.inject-->
+<!--          </argLine>-->
+<!--        </configuration>-->
       </plugin>
 
     </plugins>
